<resources>
    <string name="app_name">Homework!</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todo">TODO</string>
    <string name="favorite">favorite</string>
    <string name="search">search</string>
    <string name="setting">setting</string>
    <string name="content_description_search">content_description_search</string>
    <string name="content_description_favorite">content_description_favorite</string>
    <string name="Click">Click</string>
</resources>